--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,14 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pl">
 <head>
-  <meta charset="utf-8">
-  <title>Frontend</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aplikacja Timeline</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Możesz dodać style i inne zasoby -->
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root> <!-- Angular będzie tutaj renderować Twoją aplikację -->
 </body>
 </html>
