Refactor unnecessary func

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,8 @@
   <title>Aplikacja Timeline</title>
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- Możesz dodać style i inne zasoby -->
 </head>
 <body>
-<app-root></app-root> <!-- Angular będzie tutaj renderować Twoją aplikację -->
+<app-root></app-root>
 </body>
 </html>
